--- a/frontend/src/app/journal/journal.component.html
+++ b/frontend/src/app/journal/journal.component.html
@@ -1,4 +1,193 @@
-<p>
-  journal works! {{journal.tracks}}
-  {{journal.title}}
-</p>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset='utf-8'>
+  <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'>
+  <meta content='a free, open source, and cross-platform media player' name='description'>
+  <meta
+    content='mpv, mplayer, download, media player, player download, encoder, video, video player, multimedia, multicast, Windows, Linux, Unix, BSD, Mac, OS X, OSX, Streaming, DVD, Matroska, MPEG, MPEG2, MPEG4, H264, DivX, MKV, m2ts, open source, free software, floss, free'
+    name='keywords'>
+  <!--<link href='/images/favicon-5d3b2a52.png' rel='icon' type='image/png'>-->
+  <title>Poseidon</title>
+  <link href="https://mpv.io/stylesheets/all-a85d512c.css" media="screen" rel="stylesheet" type="text/css"/>
+  <script src="https://mpv.io/javascripts/all-c9046e4d.js" type="text/javascript"></script>
+</head>
+<body class='index'>
+<!--<div class='navbar navbar-inverse navbar-static-top' role='navigation'>-->
+  <!--<div class='container'>-->
+    <!--<div class='navbar-header'>-->
+    <!--</div>-->
+    <!--<div class='pull-right'>-->
+      <!--<ul class='nav navbar-nav'>-->
+        <!--<li>-->
+          <!--<a href="/installation"><i class='fa fa-cloud-download'></i>-->
+            <!--Installation-->
+          <!--</a>-->
+
+        <!--</li>-->
+        <!--&lt;!&ndash; %li{nav_class(guides_path)} &ndash;&gt;-->
+        <!--&lt;!&ndash; = link_to guides_path do &ndash;&gt;-->
+        <!--&lt;!&ndash; %i.fa.fa-book &ndash;&gt;-->
+        <!--&lt;!&ndash; Guides &ndash;&gt;-->
+        <!--<li>-->
+          <!--<a href="/manual"><i class='fa fa-book'></i>-->
+            <!--Reference-->
+          <!--</a>-->
+
+        <!--</li>-->
+        <!--<li>-->
+          <!--<a href="/bug-reports"><i class='fa fa-bug'></i>-->
+            <!--Bug Reports-->
+          <!--</a>-->
+
+        <!--</li>-->
+        <!--<li>-->
+          <!--<a href="/community"><i class='fa fa-comments'></i>-->
+            <!--Community-->
+          <!--</a>-->
+
+        <!--</li>-->
+      <!--</ul>-->
+    <!--</div>-->
+  <!--</div>-->
+<!--</div>-->
+<div class='jumbotron'>
+  <div class='container'>
+    <h1>
+      <img width="45" height="45" src="https://mpv.io/images/mpv-logo-128-0baae5aa.png"/>
+      {{journal.title}}
+    </h1>
+    <p>{{journal.volDesc}}</p>
+    <img class="screenshot" alt="" width="999" height="628" src={{journal.volCoverImg}}/>
+  </div>
+</div>
+<div class='main-content'>
+  <div class='container'>
+    <h2>Overview</h2>
+    <p>
+      mpv is a fork of mplayer2 and MPlayer. It shares some features with
+      the former projects while introducing many more.
+    </p>
+    <div class='row'>
+      <div class='col-md-6'>
+        <h4>
+          <i class='fa fa-terminal'></i>
+          Streamlined CLI options
+        </h4>
+        <p>
+          MPlayer's options parser was improved to behave more like other CLI
+          programs, and many option names and semantics were reworked to make
+          them more intuitive and memorable.
+        </p>
+      </div>
+      <div class='col-md-6'>
+        <h4>
+          <i class='fa fa-play'></i>
+          On Screen Controller
+        </h4>
+        <p>
+          While mpv has no official GUI, it has a small controller
+          that is triggered by mouse movement.
+        </p>
+      </div>
+    </div>
+    <div class='row'>
+      <div class='col-md-6'>
+        <h4>
+          <i class='fa fa-eye'></i>
+          High quality video output
+        </h4>
+        <p>
+          mpv has an OpenGL based video output that is capable of many features
+          loved by videophiles, such as video scaling with popular high quality
+          algorithms, color management, frame timing, interpolation, and more.
+        </p>
+      </div>
+      <div class='col-md-6'>
+        <h4>
+          <i class='fa fa-tachometer'></i>
+          GPU video decoding
+        </h4>
+        <p>
+          mpv leverages the FFmpeg hwaccel APIs to support VDPAU, VAAPI, DXVA2, VDA
+          and VideoToolbox video decoding acceleration.
+        </p>
+      </div>
+    </div>
+    <div class='row'>
+      <div class='col-md-6'>
+        <h4>
+          <i class='fa fa-cubes'></i>
+          Embeddable
+        </h4>
+        <p>
+          A straightforward
+          <a href='https://github.com/mpv-player/mpv/blob/master/libmpv/client.h'>C API</a>
+          was designed from the ground up to make mpv usable as a library and
+          facilitate easy integration into other applications.
+        </p>
+      </div>
+      <div class='col-md-6'>
+        <h4>
+          <i class='fa fa-wrench'></i>
+          Active development
+        </h4>
+        <p>
+          mpv is under active development, focusing on code refactoring and
+          cleanups as well as adding features. Want a feature?
+          <a href='https://github.com/mpv-player/mpv/issues' target='_blank'>
+            Post a patch or request it!
+          </a>
+        </p>
+      </div>
+      <!-- /.col-md-6 -->
+      <!-- /  %h4 -->
+      <!-- /    %i.fa.fa-rocket -->
+      <!-- /    Sky is the limit! -->
+      <!-- /  %p -->
+      <!-- /    mpv is packed with way more good stuff than we can fit on this page. -->
+      <!-- /    %a(href="/features") Check out the other features! -->
+    </div>
+  </div>
+</div>
+<div class='next-steps'>
+  <div class='container'>
+    <h2>Here are a few places you may want to go next...</h2>
+    <hr>
+    <div class='row'>
+      <div class='col-xs-6'>
+        <a class="composite" href="/installation"><i class='fa fa-cloud-download big-circle'></i>
+          <h3>Installation</h3>
+        </a>
+
+      </div>
+      <!-- / .col-xs-6 -->
+      <!-- /   = link_to getting_started_path, class: "composite" do -->
+      <!-- /     %i.fa.fa-book.big-circle -->
+      <!-- /     %h3 Getting started guide -->
+      <div class='col-xs-6'>
+        <a class="composite" href="https://github.com/mpv-player/mpv"><i class='fa fa-github big-circle'></i>
+          <h3>Source Code Repository</h3>
+        </a>
+
+      </div>
+    </div>
+  </div>
+</div>
+<footer>
+  <div class='container'>
+    <small class='pull-left text-muted copyright'>
+      &copy; 2012-2017 mpv.io
+    </small>
+    <div class='social-icons pull-right'>
+      <a target="_blank" href="https://github.com/mpv-player/mpv"><i class='fa fa-github-alt'></i>
+      </a>
+
+      <a target="_blank" href="https://twitter.com/mpv_player"><i class='fa fa-twitter'></i>
+      </a>
+
+    </div>
+  </div>
+</footer>
+</body>
+</html>
