--- a/frontend/src/app/journal/journal.component.html
+++ b/frontend/src/app/journal/journal.component.html
@@ -13,61 +13,51 @@
   <script src="https://mpv.io/javascripts/all-c9046e4d.js" type="text/javascript"></script>
 </head>
 <body class='index'>
-<!--<div class='navbar navbar-inverse navbar-static-top' role='navigation'>-->
-  <!--<div class='container'>-->
-    <!--<div class='navbar-header'>-->
-    <!--</div>-->
+<div class='navbar navbar-inverse navbar-static-top' role='navigation'>
+  <div class='container'>
+    <div class='navbar-header'>
+    </div>
     <!--<div class='pull-right'>-->
-      <!--<ul class='nav navbar-nav'>-->
-        <!--<li>-->
-          <!--<a href="/installation"><i class='fa fa-cloud-download'></i>-->
-            <!--Installation-->
-          <!--</a>-->
-
-        <!--</li>-->
-        <!--&lt;!&ndash; %li{nav_class(guides_path)} &ndash;&gt;-->
-        <!--&lt;!&ndash; = link_to guides_path do &ndash;&gt;-->
-        <!--&lt;!&ndash; %i.fa.fa-book &ndash;&gt;-->
-        <!--&lt;!&ndash; Guides &ndash;&gt;-->
-        <!--<li>-->
-          <!--<a href="/manual"><i class='fa fa-book'></i>-->
-            <!--Reference-->
-          <!--</a>-->
-
-        <!--</li>-->
-        <!--<li>-->
-          <!--<a href="/bug-reports"><i class='fa fa-bug'></i>-->
-            <!--Bug Reports-->
-          <!--</a>-->
-
-        <!--</li>-->
-        <!--<li>-->
-          <!--<a href="/community"><i class='fa fa-comments'></i>-->
-            <!--Community-->
-          <!--</a>-->
-
-        <!--</li>-->
-      <!--</ul>-->
+    <!--<ul class='nav navbar-nav row'>-->
+    <!--<li class='col-md-3'>-->
+    <!--<a href="/installation"><i class='fa fa-cloud-download'></i>-->
+    <!--Installation-->
+    <!--</a>-->
+    <!--</li>-->
+    <!--<li class='col-md-3'>-->
+    <!--<a href="/manual"><i class='fa fa-book'></i>-->
+    <!--Reference-->
+    <!--</a>-->
+    <!--</li>-->
+    <!--<li class='col-md-3'>-->
+    <!--<a href="/bug-reports"><i class='fa fa-bug'></i>-->
+    <!--Bug Reports-->
+    <!--</a>-->
+    <!--</li>-->
+    <!--<li class='col-md-3'>-->
+    <!--<a href="/community"><i class='fa fa-comments'></i>-->
+    <!--Community-->
+    <!--</a>-->
+    <!--</li>-->
+    <!--</ul>-->
     <!--</div>-->
-  <!--</div>-->
-<!--</div>-->
+  </div>
+</div>
 <div class='jumbotron'>
   <div class='container'>
     <h1>
       <img width="45" height="45" src="https://mpv.io/images/mpv-logo-128-0baae5aa.png"/>
       {{journal.title}}
     </h1>
-    <p>{{journal.volDesc}}</p>
+    <p>Keywords : {{journal.keyWords}}</p>
+    <!--<p>{{journal.volDesc}}</p>-->
     <img class="screenshot" alt="" width="999" height="628" src={{journal.volCoverImg}}/>
   </div>
 </div>
 <div class='main-content'>
   <div class='container'>
-    <h2>Overview</h2>
-    <p>
-      mpv is a fork of mplayer2 and MPlayer. It shares some features with
-      the former projects while introducing many more.
-    </p>
+    <h2>Desc</h2>
+    <p>{{journal.volDesc}}</p>
     <div class='row'>
       <div class='col-md-6'>
         <h4>
